<resources>
    <string name="app_name">WifiP2P</string>
    <string name="connection_status">Connection Status</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="discover">Discover</string>
    <string name="wifi_checker">Check Wifi Status</string>
    <string name="on">WiFi ON</string>
    <string name="off">WiFi OFF</string>
    <string name="discovery">Discovery Starting</string>
    <string name="discovery_failed">Discovery Starting Failed</string>
    <string name="host">Host</string>
    <string name="client">Client</string>
    <string name="device_disconnected">Device Disconnected</string>
</resources>